--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Zero Blog
-subtitle: Enjoy life, enjoy study
-description: A Zero World
+title: 时光无言流转
+subtitle: 回首向来萧瑟处，归去，也无风雨也无晴。
+description: 回首向来萧瑟处，归去，也无风雨也无晴。
 keywords: Front-End Javascript css html vue react IT life study blog
-author: Zero
-language: en
+author: 时光无言流转
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
@@ -67,13 +67,24 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
+
+# RSS setting
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
